fixed overflow of too many puzzles
(cherry picked from commit bffc35547072fcc66078c402fc2860f00ffc27a4)

--- a/client/src/components/views/GeneralAreaPage/GeneralAreaPage.css
+++ b/client/src/components/views/GeneralAreaPage/GeneralAreaPage.css
@@ -1,5 +1,6 @@
 .app {
-    /* justify-content: flex-start; */
+    height: 100%;
+    padding: 32px 16px;
 }
 
 h1 {
